[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/MainGameUI.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/HandManager.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui/FieldManager.gd" type="Script" id=3]

[node name="MainGameUI" type="Control"]
script = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerInfoPanel" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.3
anchor_bottom = 0.2

[node name="LPLabel" type="Label" parent="PlayerInfoPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.33
text = "LP: 30"

[node name="ManaLabel" type="Label" parent="PlayerInfoPanel"]
anchor_left = 0.0
anchor_top = 0.33
anchor_right = 0.5
anchor_bottom = 0.66
text = "Mana: 1/1"

[node name="ArmorLabel" type="Label" parent="PlayerInfoPanel"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.33
text = "Armor: 0"

[node name="ExtraPointsLabel" type="Label" parent="PlayerInfoPanel"]
anchor_left = 0.5
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.66
text = "EX: 2"

[node name="OpponentInfoPanel" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.8
anchor_right = 0.3
anchor_bottom = 1.0

[node name="LPLabel" type="Label" parent="OpponentInfoPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.33
text = "LP: 30"

[node name="ManaLabel" type="Label" parent="OpponentInfoPanel"]
anchor_left = 0.0
anchor_top = 0.33
anchor_right = 0.5
anchor_bottom = 0.66
text = "Mana: 1/1"

[node name="ArmorLabel" type="Label" parent="OpponentInfoPanel"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.33
text = "Armor: 0"

[node name="ExtraPointsLabel" type="Label" parent="OpponentInfoPanel"]
anchor_left = 0.5
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.66
text = "EX: 2"

[node name="GameInfoPanel" type="Panel" parent="."]
anchor_left = 0.7
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.2

[node name="PhaseLabel" type="Label" parent="GameInfoPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.5
text = "开始阶段"

[node name="TurnLabel" type="Label" parent="GameInfoPanel"]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
text = "回合: 1"

[node name="PlayerFieldContainer" type="Control" parent="."]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.7
script = ExtResource( 3 )

[node name="MonsterZones" type="HBoxContainer" parent="PlayerFieldContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.6

[node name="SpellZones" type="HBoxContainer" parent="PlayerFieldContainer"]
anchor_left = 0.0
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ExtraZone" type="Control" parent="PlayerFieldContainer"]
anchor_left = 0.8
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.6

[node name="OpponentFieldContainer" type="Control" parent="."]
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.5

[node name="MonsterZones" type="HBoxContainer" parent="OpponentFieldContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.6

[node name="SpellZones" type="HBoxContainer" parent="OpponentFieldContainer"]
anchor_left = 0.0
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ExtraZone" type="Control" parent="OpponentFieldContainer"]
anchor_left = 0.8
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.6

[node name="HandContainer" type="Control" parent="."]
anchor_left = 0.1
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PlayerGraveyardPile" type="Control" parent="."]
anchor_left = 0.9
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.7

[node name="PlayerDeckPile" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.1
anchor_bottom = 0.7

[node name="OpponentGraveyardPile" type="Control" parent="."]
anchor_left = 0.9
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.5

[node name="OpponentDeckPile" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.3
anchor_right = 0.1
anchor_bottom = 0.5

[node name="TutorialPanel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
visible = false

[node name="MessageLabel" type="Label" parent="TutorialPanel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.8
text = "教程信息"

[node name="ContinueButton" type="Button" parent="TutorialPanel"]
anchor_left = 0.4
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 0.95
text = "继续"

[node name="ControlPanel" type="HBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.3

[node name="NextPhaseButton" type="Button" parent="ControlPanel"]
text = "下一阶段"

[node name="DrawCardButton" type="Button" parent="ControlPanel"]
text = "抽牌"

[node name="MenuButton" type="Button" parent="ControlPanel"]
text = "菜单"